tests/integration/fail/strings_bounds_error.kr
# Test: String index out of bounds
# Expected: Fail with bounds error

set text to "Hello"
set x to text at 10

